# libopenstreamdeck

./: .clang-format  .gitignore  CMakeLists.txt  README.md  conanfile.py  conanfile.txt
.github/workflows/: build.yml
openstreamdeck/: CMakeLists.txt
openstreamdeck/src/: Actions.h  Events.h  StreamDeckPlugin.cpp  StreamDeckPlugin.h  StreamDeckPluginStatus.cpp  StreamDeckPluginStatus.h
openstreamdeck/src/event/: ApplicationDidLaunchEvent.cpp  ApplicationDidLaunchEvent.h  ApplicationDidTerminateEvent.cpp  ApplicationDidTerminateEvent.h  DeviceDidConnectEvent.cpp  DeviceDidConnectEvent.h  DeviceDidDisconnectEvent.cpp  DeviceDidDisconnectEvent.h  DidReceiveGlobalSettingsEvent.cpp  DidReceiveGlobalSettingsEvent.h  DidReceiveSettingsEvent.cpp  DidReceiveSettingsEvent.h  Event.cpp  Event.h  KeyDownEvent.cpp  KeyDownEvent.h  KeyUpEvent.cpp  KeyUpEvent.h  PropertyInspectorDidAppearEvent.cpp  PropertyInspectorDidAppearEvent.h  PropertyInspectorDidDisappearEvent.cpp  PropertyInspectorDidDisappearEvent.h  SendToPluginEvent.cpp  SendToPluginEvent.h  SystemDidWakeUpEvent.cpp  SystemDidWakeUpEvent.h  TitleParametersDidChangeEvent.cpp  TitleParametersDidChangeEvent.h  WillAppearEvent.cpp  WillAppearEvent.h  WillDisappearEvent.cpp  WillDisappearEvent.h
openstreamdeck/src/internal/: ActionManager.cpp  ActionManager.h  CommunicationManager.cpp  CommunicationManager.h  EventManager.cpp  EventManager.h  EventParsingManager.cpp  EventParsingManager.h  Logger.cpp  Logger.h  Registration.cpp  Registration.h  RegistrationParser.cpp  RegistrationParser.h  StreamDeckPluginImpl.cpp  StreamDeckPluginImpl.h
openstreamdeck/src/internal/event/received/: ApplicationDidLaunchEventParser.cpp  ApplicationDidLaunchEventParser.h  ApplicationDidTerminateEventParser.cpp  ApplicationDidTerminateEventParser.h  DeviceDidConnectEventParser.cpp  DeviceDidConnectEventParser.h  DeviceDidDisconnectEventParser.cpp  DeviceDidDisconnectEventParser.h  DidReceiveGlobalSettingsEventParser.cpp  DidReceiveGlobalSettingsEventParser.h  DidReceiveSettingsEventParser.cpp  DidReceiveSettingsEventParser.h  EventKeys.h  EventParser.cpp  EventParser.h  KeyDownEventParser.cpp  KeyDownEventParser.h  KeyUpEventParser.cpp  KeyUpEventParser.h  PropertyInspectorDidAppearEventParser.cpp  PropertyInspectorDidAppearEventParser.h  PropertyInspectorDidDisappearEventParser.cpp  PropertyInspectorDidDisappearEventParser.h  SendToPluginEventParser.cpp  SendToPluginEventParser.h  SystemDidWakeUpEventParser.cpp  SystemDidWakeUpEventParser.h  TitleParametersDidChangeEventParser.cpp  TitleParametersDidChangeEventParser.h  WillAppearEventParser.cpp  WillAppearEventParser.h  WillDisappearEventParser.cpp  WillDisappearEventParser.h
openstreamdeck/src/internal/event/sent/: GetGlobalSettingsSentEvent.cpp  GetGlobalSettingsSentEvent.h  GetSettingsSentEvent.cpp  GetSettingsSentEvent.h  LogMessageSentEvent.cpp  LogMessageSentEvent.h  OpenUrlSentEvent.cpp  OpenUrlSentEvent.h  RegistrationSentEvent.cpp  RegistrationSentEvent.h  SendToPropertyInspectorSentEvent.cpp  SendToPropertyInspectorSentEvent.h  SentEvent.cpp  SentEvent.h  SetGlobalSettingsSentEvent.cpp  SetGlobalSettingsSentEvent.h  SetImageSentEvent.cpp  SetImageSentEvent.h  SetSettingsSentEvent.cpp  SetSettingsSentEvent.h  SetStateSentEvent.cpp  SetStateSentEvent.h  SetTitleSentEvent.cpp  SetTitleSentEvent.h  ShowAlertSentEvent.cpp  ShowAlertSentEvent.h  ShowOkSentEvent.cpp  ShowOkSentEvent.h  SwitchToProfileSentEvent.cpp  SwitchToProfileSentEvent.h
openstreamdeck/test/: main.cpp
openstreamdeck/test/internal/: RegistrationParserTests.cpp
openstreamdeck/test/internal/event/received/: WillAppearEventParserTests.cpp
test_package/: CMakeLists.txt  conanfile.py  example.cpp
